# safe_unaligned_simd

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust-ci.yml
src/: aarch64.rs  common_traits.rs  lib.rs  traits.rs  wasm32.rs  x86.rs  x86_64.rs
src/x86/: avx.rs  avx512bw.rs  avx512f.rs  avx512vbmi2.rs  cell.rs  nt.rs  sse.rs  sse2.rs
src/x86/cell/: avx.rs  sse2.rs
src/x86_64/: avx.rs  sse.rs
tests/: tests.rs
tests/assembly/x86/: sse.rs  sse2-loads.rs  sse2-stores.rs
